--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.0.4",
+    "nodemailer": "^6.7.0",
     "nodemon": "^2.0.14"
   },
   "bugs": {
