--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Raymond Ariwoola",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.6.0",
     "body-parser": "^1.18.3",
     "dotenv": "^10.0.0",
     "ejs": "^2.6.1",
